[package]
name = "game_stream_start_menu"
version = "0.1.0"
authors = ["Michael Zhou <mzhou@cse.unsw.edu.au>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winapi = { version = "0.3", features = ["std", "winuser"] }
